asgn4/bin/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    CONSTANT_RESOLUTION
    PLUS_AT
    undef
    STRING2
    WORD_OR
    rescue
    COMPLEMENT
    not
    MAP
    yield
    SYMBOL_NOT
    module
    LOGICAL_AND
    ELEMENT_REFERENCE
    BEGIN
    retry
    COLON
    END
    REGEXP
    super
    CLOSE_FLOWER
    ensure
    or
    DOUBLE_QUOTE
    OPEN_FLOWER
    ELEMENT_SET
    next
    redo
    DOT
    WORD_AND
    QUESTION_MARK
    HEREDOC
    and
    defined
    MINUS_AT
    WORD_NOT
    begin
    unless
    DOLLAR
    class
    alias

Grammar

Rule 0     S' -> compstmt
Rule 1     compstmt -> multcompstmt
Rule 2     multcompstmt -> newline stmt1 multcompstmt
Rule 3     multcompstmt -> stmt1 multcompstmt
Rule 4     multcompstmt -> newline
Rule 5     multcompstmt -> empty
Rule 6     stmt1 -> stmt
Rule 7     stmt -> keydef argdecl newline multstmt keyend
Rule 8     stmt -> puts OPEN_BRACKET STRING CLOSE_BRACKET
Rule 9     stmt -> print OPEN_BRACKET primary CLOSE_BRACKET
Rule 10    stmt -> break
Rule 11    stmt -> expr
Rule 12    keydef -> def IDENTIFIER
Rule 13    keyend -> end
Rule 14    multstmt -> stmt newline multstmt
Rule 15    multstmt -> empty
Rule 16    expr -> if expr1 pthen M_1 multstmt else newline M_1 multstmt end M_1
Rule 17    expr -> if expr1 pthen M_1 multstmt M_1 multelsif end M_1
Rule 18    expr -> if expr1 pthen M_1 multstmt end M_1
Rule 19    expr -> while M_1 expr1 pdo M_1 multstmt end M_1
Rule 20    expr -> until M_1 expr1 pdo M_1 multstmt end M_1
Rule 21    expr -> case expr1 newline multcase end M_1
Rule 22    expr -> for M_1 mlhs in expr1 pdo M_1 multstmt end M_1
Rule 23    expr -> expr1
Rule 24    M_1 -> empty
Rule 25    expr1 -> return IDENTIFIER
Rule 26    expr1 -> return
Rule 27    expr1 -> expr2
Rule 28    expr2 -> arg
Rule 29    expr2 -> call
Rule 30    call -> function
Rule 31    function -> IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
Rule 32    function -> IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
Rule 33    arg -> arg BIT_OR term0
Rule 34    arg -> term0
Rule 35    term0 -> mlhs EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
Rule 36    term0 -> mlhs EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
Rule 37    term0 -> term1
Rule 38    term1 -> mlhs EQUALS mrhs
Rule 39    term1 -> mlhs opasgn mrhs
Rule 40    term1 -> term2
Rule 41    term2 -> term3 INCL_RANGE term3
Rule 42    term2 -> term3 EXCL_RANGE term3
Rule 43    term2 -> term3
Rule 44    term3 -> term3 LOGICAL_OR term4
Rule 45    term3 -> term4
Rule 46    term4 -> term5 DOUBLE_EQUALS term5
Rule 47    term4 -> term5 TRIPLE_EQUALS term5
Rule 48    term4 -> term5 NOT_EQUALS term5
Rule 49    term4 -> term5 EQUAL_TILDE term5
Rule 50    term4 -> term5 BANG_TILDE term5
Rule 51    term4 -> term5 COMPARISON term5
Rule 52    term4 -> term5
Rule 53    term5 -> term5 LESS term6
Rule 54    term5 -> term5 LESS_EQUALS term6
Rule 55    term5 -> term5 GREATER term6
Rule 56    term5 -> term5 GREATER_EQUALS term6
Rule 57    term5 -> term6
Rule 58    term6 -> term6 BIT_XOR term7
Rule 59    term6 -> term7
Rule 60    term7 -> term7 BIT_AND term8
Rule 61    term7 -> term8
Rule 62    term8 -> term8 LEFT_SHIFT term9
Rule 63    term8 -> term8 RIGHT_SHIFT term9
Rule 64    term8 -> term9
Rule 65    term9 -> term9 PLUS term10
Rule 66    term9 -> term9 MINUS term10
Rule 67    term9 -> term10
Rule 68    term10 -> term10 MULTIPLY term11
Rule 69    term10 -> term10 DIVIDE term11
Rule 70    term10 -> term10 MODULO term11
Rule 71    term10 -> term11
Rule 72    term11 -> MINUS term11
Rule 73    term11 -> term12
Rule 74    term12 -> PLUS term12
Rule 75    term12 -> term13
Rule 76    term13 -> primary POWER term13
Rule 77    term13 -> primary
Rule 78    primary -> OPEN_BRACKET expr2 CLOSE_BRACKET
Rule 79    primary -> arrayd
Rule 80    primary -> arraya
Rule 81    primary -> literal
Rule 82    primary -> varname
Rule 83    arrayd -> Array OPEN_BRACKET array_size CLOSE_BRACKET
Rule 84    array_size -> primary COMMA array_size
Rule 85    array_size -> primary
Rule 86    arrayal -> variable OPEN_SQUARE array_args CLOSE_SQUARE
Rule 87    arraya -> variable OPEN_SQUARE array_args CLOSE_SQUARE
Rule 88    array_args -> primary COMMA array_args
Rule 89    array_args -> primary
Rule 90    multcase -> when whenargs pthen M_1 multstmt M_1 multcase
Rule 91    multcase -> when whenargs pthen M_1 multstmt M_1
Rule 92    multelsif -> elsif expr pthen M_1 multstmt M_1 multelsif M_1
Rule 93    multelsif -> else newline multstmt
Rule 94    multelsif -> empty
Rule 95    literal -> NUMBER
Rule 96    literal -> FLOAT
Rule 97    literal -> STRING
Rule 98    literal -> true
Rule 99    literal -> false
Rule 100   whenargs -> arg
Rule 101   mlhs -> mlhsitem
Rule 102   mlhsitem -> IDENTIFIER
Rule 103   mlhsitem -> arrayal
Rule 104   arrayl -> primary2 OPEN_SQUARE array_argsl CLOSE_SQUARE
Rule 105   array_argsl -> primary2 COMMA array_argsl
Rule 106   array_argsl -> primary2
Rule 107   primary2 -> IDENTIFIER
Rule 108   primary2 -> literal
Rule 109   lhs -> variable
Rule 110   lhs -> variable OPEN_SQUARE args CLOSE_SQUARE
Rule 111   lhs -> variable OPEN_SQUARE CLOSE_SQUARE
Rule 112   mrhs -> term2
Rule 113   mrhs -> args COMMA MULTIPLY arg
Rule 114   mrhs -> MULTIPLY arg
Rule 115   callargs -> callarglist
Rule 116   callarglist -> primary callmultarglist
Rule 117   callarglist -> empty
Rule 118   callmultarglist -> COMMA primary callmultarglist
Rule 119   callmultarglist -> empty
Rule 120   args -> arg multargs
Rule 121   multargs -> COMMA arg multargs
Rule 122   multargs -> empty
Rule 123   argdecl -> OPEN_BRACKET arglist CLOSE_BRACKET
Rule 124   arglist -> IDENTIFIER multarglist
Rule 125   arglist -> empty
Rule 126   multarglist -> COMMA IDENTIFIER multarglist
Rule 127   multarglist -> empty
Rule 128   variable -> varname
Rule 129   variable -> nil
Rule 130   variable -> self
Rule 131   pthen -> newline
Rule 132   pthen -> then
Rule 133   pthen -> newline then
Rule 134   pdo -> newline
Rule 135   pdo -> do newline
Rule 136   pdo -> newline do
Rule 137   opasgn -> MODULO_EQUALS
Rule 138   opasgn -> DIVIDE_EQUALS
Rule 139   opasgn -> MINUS_EQUALS
Rule 140   opasgn -> PLUS_EQUALS
Rule 141   opasgn -> OR_EQUALS
Rule 142   opasgn -> AND_EQUALS
Rule 143   opasgn -> XOR_EQUALS
Rule 144   opasgn -> RIGHT_SHIFT_EQUALS
Rule 145   opasgn -> LEFT_SHIFT_EQUALS
Rule 146   opasgn -> MULTIPLY_EQUALS
Rule 147   opasgn -> LOGICAL_AND_EQUALS
Rule 148   opasgn -> LOGICAL_OR_EQUALS
Rule 149   opasgn -> POWER_EQUALS
Rule 150   varname -> GLOBAL
Rule 151   varname -> AT_THE_RATE IDENTIFIER
Rule 152   varname -> IDENTIFIER
Rule 153   newline -> SEMI_COLON
Rule 154   newline -> NEWLINE
Rule 155   empty -> <empty>

Terminals, with rules where they appear

AND_EQUALS           : 142
AT_THE_RATE          : 151
Array                : 83
BANG_TILDE           : 50
BEGIN                : 
BIT_AND              : 60
BIT_OR               : 33
BIT_XOR              : 58
CLOSE_BRACKET        : 8 9 31 32 35 36 78 83 123
CLOSE_FLOWER         : 
CLOSE_SQUARE         : 86 87 104 110 111
COLON                : 
COMMA                : 84 88 105 113 118 121 126
COMPARISON           : 51
COMPLEMENT           : 
CONSTANT_RESOLUTION  : 
DIVIDE               : 69
DIVIDE_EQUALS        : 138
DOLLAR               : 
DOT                  : 
DOUBLE_EQUALS        : 46
DOUBLE_QUOTE         : 
ELEMENT_REFERENCE    : 
ELEMENT_SET          : 
END                  : 
EQUALS               : 35 36 38
EQUAL_TILDE          : 49
EXCL_RANGE           : 42
FLOAT                : 96
GLOBAL               : 150
GREATER              : 55
GREATER_EQUALS       : 56
HEREDOC              : 
IDENTIFIER           : 12 25 31 32 35 36 102 107 124 126 151 152
INCL_RANGE           : 41
LEFT_SHIFT           : 62
LEFT_SHIFT_EQUALS    : 145
LESS                 : 53
LESS_EQUALS          : 54
LOGICAL_AND          : 
LOGICAL_AND_EQUALS   : 147
LOGICAL_OR           : 44
LOGICAL_OR_EQUALS    : 148
MAP                  : 
MINUS                : 66 72
MINUS_AT             : 
MINUS_EQUALS         : 139
MODULO               : 70
MODULO_EQUALS        : 137
MULTIPLY             : 68 113 114
MULTIPLY_EQUALS      : 146
NEWLINE              : 154
NOT_EQUALS           : 48
NUMBER               : 95
OPEN_BRACKET         : 8 9 31 32 35 36 78 83 123
OPEN_FLOWER          : 
OPEN_SQUARE          : 86 87 104 110 111
OR_EQUALS            : 141
PLUS                 : 65 74
PLUS_AT              : 
PLUS_EQUALS          : 140
POWER                : 76
POWER_EQUALS         : 149
QUESTION_MARK        : 
REGEXP               : 
RIGHT_SHIFT          : 63
RIGHT_SHIFT_EQUALS   : 144
SEMI_COLON           : 153
STRING               : 8 97
STRING2              : 
SYMBOL_NOT           : 
TRIPLE_EQUALS        : 47
WORD_AND             : 
WORD_NOT             : 
WORD_OR              : 
XOR_EQUALS           : 143
alias                : 
and                  : 
begin                : 
break                : 10
case                 : 21
class                : 
def                  : 12
defined              : 
do                   : 135 136
else                 : 16 93
elsif                : 92
end                  : 13 16 17 18 19 20 21 22
ensure               : 
error                : 
false                : 99
for                  : 22
if                   : 16 17 18
in                   : 22
module               : 
next                 : 
nil                  : 129
not                  : 
or                   : 
print                : 9
puts                 : 8
redo                 : 
rescue               : 
retry                : 
return               : 25 26
self                 : 130
super                : 
then                 : 132 133
true                 : 98
undef                : 
unless               : 
until                : 20
when                 : 90 91
while                : 19
yield                : 

Nonterminals, with rules where they appear

M_1                  : 16 16 16 17 17 17 18 18 19 19 19 20 20 20 21 22 22 22 90 90 91 91 92 92 92
arg                  : 28 33 100 113 114 120 121
argdecl              : 7
arglist              : 123
args                 : 110 113
array_args           : 86 87 88
array_argsl          : 104 105
array_size           : 83 84
arraya               : 80
arrayal              : 103
arrayd               : 79
arrayl               : 
call                 : 29
callarglist          : 115
callargs             : 31 36
callmultarglist      : 116 118
compstmt             : 0
empty                : 5 15 24 94 117 119 122 125 127
expr                 : 11 92
expr1                : 16 17 18 19 20 21 22 23
expr2                : 27 78
function             : 30
keydef               : 7
keyend               : 7
lhs                  : 
literal              : 81 108
mlhs                 : 22 35 36 38 39
mlhsitem             : 101
mrhs                 : 38 39
multarglist          : 124 126
multargs             : 120 121
multcase             : 21 90
multcompstmt         : 1 2 3
multelsif            : 17 92
multstmt             : 7 14 16 16 17 18 19 20 22 90 91 92 93
newline              : 2 4 7 14 16 21 93 131 133 134 135 136
opasgn               : 39
pdo                  : 19 20 22
primary              : 9 76 77 84 85 88 89 116 118
primary2             : 104 105 106
pthen                : 16 17 18 90 91 92
stmt                 : 6 14
stmt1                : 2 3
term0                : 33 34
term1                : 37
term10               : 65 66 67 68 69 70
term11               : 68 69 70 71 72
term12               : 73 74
term13               : 75 76
term2                : 40 112
term3                : 41 41 42 42 43 44
term4                : 44 45
term5                : 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54 55 56
term6                : 53 54 55 56 57 58
term7                : 58 59 60
term8                : 60 61 62 63
term9                : 62 63 64 65 66
variable             : 86 87 109 110 111
varname              : 82 128
whenargs             : 90 91

Parsing method: LALR

state 0

    (0) S' -> . compstmt
    (1) compstmt -> . multcompstmt
    (2) multcompstmt -> . newline stmt1 multcompstmt
    (3) multcompstmt -> . stmt1 multcompstmt
    (4) multcompstmt -> . newline
    (5) multcompstmt -> . empty
    (153) newline -> . SEMI_COLON
    (154) newline -> . NEWLINE
    (6) stmt1 -> . stmt
    (155) empty -> .
    (7) stmt -> . keydef argdecl newline multstmt keyend
    (8) stmt -> . puts OPEN_BRACKET STRING CLOSE_BRACKET
    (9) stmt -> . print OPEN_BRACKET primary CLOSE_BRACKET
    (10) stmt -> . break
    (11) stmt -> . expr
    (12) keydef -> . def IDENTIFIER
    (16) expr -> . if expr1 pthen M_1 multstmt else newline M_1 multstmt end M_1
    (17) expr -> . if expr1 pthen M_1 multstmt M_1 multelsif end M_1
    (18) expr -> . if expr1 pthen M_1 multstmt end M_1
    (19) expr -> . while M_1 expr1 pdo M_1 multstmt end M_1
    (20) expr -> . until M_1 expr1 pdo M_1 multstmt end M_1
    (21) expr -> . case expr1 newline multcase end M_1
    (22) expr -> . for M_1 mlhs in expr1 pdo M_1 multstmt end M_1
    (23) expr -> . expr1
    (25) expr1 -> . return IDENTIFIER
    (26) expr1 -> . return
    (27) expr1 -> . expr2
    (28) expr2 -> . arg
    (29) expr2 -> . call
    (33) arg -> . arg BIT_OR term0
    (34) arg -> . term0
    (30) call -> . function
    (35) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (36) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (37) term0 -> . term1
    (31) function -> . IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (32) function -> . IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (101) mlhs -> . mlhsitem
    (38) term1 -> . mlhs EQUALS mrhs
    (39) term1 -> . mlhs opasgn mrhs
    (40) term1 -> . term2
    (102) mlhsitem -> . IDENTIFIER
    (103) mlhsitem -> . arrayal
    (41) term2 -> . term3 INCL_RANGE term3
    (42) term2 -> . term3 EXCL_RANGE term3
    (43) term2 -> . term3
    (86) arrayal -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (44) term3 -> . term3 LOGICAL_OR term4
    (45) term3 -> . term4
    (128) variable -> . varname
    (129) variable -> . nil
    (130) variable -> . self
    (46) term4 -> . term5 DOUBLE_EQUALS term5
    (47) term4 -> . term5 TRIPLE_EQUALS term5
    (48) term4 -> . term5 NOT_EQUALS term5
    (49) term4 -> . term5 EQUAL_TILDE term5
    (50) term4 -> . term5 BANG_TILDE term5
    (51) term4 -> . term5 COMPARISON term5
    (52) term4 -> . term5
    (150) varname -> . GLOBAL
    (151) varname -> . AT_THE_RATE IDENTIFIER
    (152) varname -> . IDENTIFIER
    (53) term5 -> . term5 LESS term6
    (54) term5 -> . term5 LESS_EQUALS term6
    (55) term5 -> . term5 GREATER term6
    (56) term5 -> . term5 GREATER_EQUALS term6
    (57) term5 -> . term6
    (58) term6 -> . term6 BIT_XOR term7
    (59) term6 -> . term7
    (60) term7 -> . term7 BIT_AND term8
    (61) term7 -> . term8
    (62) term8 -> . term8 LEFT_SHIFT term9
    (63) term8 -> . term8 RIGHT_SHIFT term9
    (64) term8 -> . term9
    (65) term9 -> . term9 PLUS term10
    (66) term9 -> . term9 MINUS term10
    (67) term9 -> . term10
    (68) term10 -> . term10 MULTIPLY term11
    (69) term10 -> . term10 DIVIDE term11
    (70) term10 -> . term10 MODULO term11
    (71) term10 -> . term11
    (72) term11 -> . MINUS term11
    (73) term11 -> . term12
    (74) term12 -> . PLUS term12
    (75) term12 -> . term13
    (76) term13 -> . primary POWER term13
    (77) term13 -> . primary
    (78) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (79) primary -> . arrayd
    (80) primary -> . arraya
    (81) primary -> . literal
    (82) primary -> . varname
    (83) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (87) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (95) literal -> . NUMBER
    (96) literal -> . FLOAT
    (97) literal -> . STRING
    (98) literal -> . true
    (99) literal -> . false

    SEMI_COLON      shift and go to state 22
    NEWLINE         shift and go to state 3
    $end            reduce using rule 155 (empty -> .)
    puts            shift and go to state 33
    print           shift and go to state 25
    break           shift and go to state 59
    def             shift and go to state 47
    if              shift and go to state 51
    while           shift and go to state 45
    until           shift and go to state 37
    case            shift and go to state 43
    for             shift and go to state 24
    return          shift and go to state 6
    IDENTIFIER      shift and go to state 36
    nil             shift and go to state 56
    self            shift and go to state 52
    GLOBAL          shift and go to state 30
    AT_THE_RATE     shift and go to state 21
    MINUS           shift and go to state 2
    PLUS            shift and go to state 5
    OPEN_BRACKET    shift and go to state 4
    Array           shift and go to state 61
    NUMBER          shift and go to state 50
    FLOAT           shift and go to state 60
    STRING          shift and go to state 55
    true            shift and go to state 42
    false           shift and go to state 49

    term7                          shift and go to state 12
    term6                          shift and go to state 13
    term5                          shift and go to state 14
    term4                          shift and go to state 15
    term3                          shift and go to state 16
    term2                          shift and go to state 17
    term1                          shift and go to state 18
    term0                          shift and go to state 19
    mlhs                           shift and go to state 1
    primary                        shift and go to state 31
    term9                          shift and go to state 20
    term8                          shift and go to state 41
    arg                            shift and go to state 23
    arrayal                        shift and go to state 32
    expr2                          shift and go to state 53
    term13                         shift and go to state 8
    literal                        shift and go to state 34
    expr1                          shift and go to state 54
    call                           shift and go to state 35
    varname                        shift and go to state 28
    empty                          shift and go to state 38
    function                       shift and go to state 39
    newline                        shift and go to state 57
    multcompstmt                   shift and go to state 7
    stmt                           shift and go to state 26
    mlhsitem                       shift and go to state 40
    variable                       shift and go to state 58
    compstmt                       shift and go to state 27
    expr                           shift and go to state 44
    stmt1                          shift and go to state 29
    arraya                         shift and go to state 46
    arrayd                         shift and go to state 48
    keydef                         shift and go to state 62
    term12                         shift and go to state 9
    term11                         shift and go to state 10
    term10                         shift and go to state 11

state 1

    (35) term0 -> mlhs . EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (36) term0 -> mlhs . EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (38) term1 -> mlhs . EQUALS mrhs
    (39) term1 -> mlhs . opasgn mrhs
    (137) opasgn -> . MODULO_EQUALS
    (138) opasgn -> . DIVIDE_EQUALS
    (139) opasgn -> . MINUS_EQUALS
    (140) opasgn -> . PLUS_EQUALS
    (141) opasgn -> . OR_EQUALS
    (142) opasgn -> . AND_EQUALS
    (143) opasgn -> . XOR_EQUALS
    (144) opasgn -> . RIGHT_SHIFT_EQUALS
    (145) opasgn -> . LEFT_SHIFT_EQUALS
    (146) opasgn -> . MULTIPLY_EQUALS
    (147) opasgn -> . LOGICAL_AND_EQUALS
    (148) opasgn -> . LOGICAL_OR_EQUALS
    (149) opasgn -> . POWER_EQUALS

    EQUALS          shift and go to state 72
    MODULO_EQUALS   shift and go to state 77
    DIVIDE_EQUALS   shift and go to state 68
    MINUS_EQUALS    shift and go to state 63
    PLUS_EQUALS     shift and go to state 64
    OR_EQUALS       shift and go to state 73
    AND_EQUALS      shift and go to state 67
    XOR_EQUALS      shift and go to state 65
    RIGHT_SHIFT_EQUALS shift and go to state 71
    LEFT_SHIFT_EQUALS shift and go to state 66
    MULTIPLY_EQUALS shift and go to state 75
    LOGICAL_AND_EQUALS shift and go to state 70
    LOGICAL_OR_EQUALS shift and go to state 76
    POWER_EQUALS    shift and go to state 69

    opasgn                         shift and go to state 74

state 2

    (72) term11 -> MINUS . term11
    (72) term11 -> . MINUS term11
    (73) term11 -> . term12
    (74) term12 -> . PLUS term12
    (75) term12 -> . term13
    (76) term13 -> . primary POWER term13
    (77) term13 -> . primary
    (78) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (79) primary -> . arrayd
    (80) primary -> . arraya
    (81) primary -> . literal
    (82) primary -> . varname
    (83) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (87) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (95) literal -> . NUMBER
    (96) literal -> . FLOAT
    (97) literal -> . STRING
    (98) literal -> . true
    (99) literal -> . false
    (150) varname -> . GLOBAL
    (151) varname -> . AT_THE_RATE IDENTIFIER
    (152) varname -> . IDENTIFIER
    (128) variable -> . varname
    (129) variable -> . nil
    (130) variable -> . self

    MINUS           shift and go to state 2
    PLUS            shift and go to state 5
    OPEN_BRACKET    shift and go to state 4
    Array           shift and go to state 61
    NUMBER          shift and go to state 50
    FLOAT           shift and go to state 60
    STRING          shift and go to state 55
    true            shift and go to state 42
    false           shift and go to state 49
    GLOBAL          shift and go to state 30
    AT_THE_RATE     shift and go to state 21
    IDENTIFIER      shift and go to state 78
    nil             shift and go to state 56
    self            shift and go to state 52

    varname                        shift and go to state 80
    primary                        shift and go to state 31
    literal                        shift and go to state 34
    variable                       shift and go to state 79
    arraya                         shift and go to state 46
    term13                         shift and go to state 8
    term12                         shift and go to state 9
    term11                         shift and go to state 81
    arrayd                         shift and go to state 48

state 3

    (154) newline -> NEWLINE .

    then            reduce using rule 154 (newline -> NEWLINE .)
    puts            reduce using rule 154 (newline -> NEWLINE .)
    print           reduce using rule 154 (newline -> NEWLINE .)
    break           reduce using rule 154 (newline -> NEWLINE .)
    def             reduce using rule 154 (newline -> NEWLINE .)
    if              reduce using rule 154 (newline -> NEWLINE .)
    while           reduce using rule 154 (newline -> NEWLINE .)
    until           reduce using rule 154 (newline -> NEWLINE .)
    case            reduce using rule 154 (newline -> NEWLINE .)
    for             reduce using rule 154 (newline -> NEWLINE .)
    return          reduce using rule 154 (newline -> NEWLINE .)
    IDENTIFIER      reduce using rule 154 (newline -> NEWLINE .)
    nil             reduce using rule 154 (newline -> NEWLINE .)
    self            reduce using rule 154 (newline -> NEWLINE .)
    GLOBAL          reduce using rule 154 (newline -> NEWLINE .)
    AT_THE_RATE     reduce using rule 154 (newline -> NEWLINE .)
    MINUS           reduce using rule 154 (newline -> NEWLINE .)
    PLUS            reduce using rule 154 (newline -> NEWLINE .)
    OPEN_BRACKET    reduce using rule 154 (newline -> NEWLINE .)
    Array           reduce using rule 154 (newline -> NEWLINE .)
    NUMBER          reduce using rule 154 (newline -> NEWLINE .)
    FLOAT           reduce using rule 154 (newline -> NEWLINE .)
    STRING          reduce using rule 154 (newline -> NEWLINE .)
    true            reduce using rule 154 (newline -> NEWLINE .)
    false           reduce using rule 154 (newline -> NEWLINE .)
    else            reduce using rule 154 (newline -> NEWLINE .)
    end             reduce using rule 154 (newline -> NEWLINE .)
    elsif           reduce using rule 154 (newline -> NEWLINE .)
    when            reduce using rule 154 (newline -> NEWLINE .)
    $end            reduce using rule 154 (newline -> NEWLINE .)
    do              reduce using rule 154 (newline -> NEWLINE .)


state 4

    (78) primary -> OPEN_BRACKET . expr2 CLOSE_BRACKET
    (28) expr2 -> . arg
    (29) expr2 -> . call
    (33) arg -> . arg BIT_OR term0
    (34) arg -> . term0
    (30) call -> . function
    (35) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (36) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (37) term0 -> . term1
    (31) function -> . IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (32) function -> . IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (101) mlhs -> . mlhsitem
    (38) term1 -> . mlhs EQUALS mrhs
    (39) term1 -> . mlhs opasgn mrhs
    (40) term1 -> . term2
    (102) mlhsitem -> . IDENTIFIER
    (103) mlhsitem -> . arrayal
    (41) term2 -> . term3 INCL_RANGE term3
    (42) term2 -> . term3 EXCL_RANGE term3
    (43) term2 -> . term3
    (86) arrayal -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (44) term3 -> . term3 LOGICAL_OR term4
    (45) term3 -> . term4
    (128) variable -> . varname
    (129) variable -> . nil
    (130) variable -> . self
    (46) term4 -> . term5 DOUBLE_EQUALS term5
    (47) term4 -> . term5 TRIPLE_EQUALS term5
    (48) term4 -> . term5 NOT_EQUALS term5
    (49) term4 -> . term5 EQUAL_TILDE term5
    (50) term4 -> . term5 BANG_TILDE term5
    (51) term4 -> . term5 COMPARISON term5
    (52) term4 -> . term5
    (150) varname -> . GLOBAL
    (151) varname -> . AT_THE_RATE IDENTIFIER
    (152) varname -> . IDENTIFIER
    (53) term5 -> . term5 LESS term6
    (54) term5 -> . term5 LESS_EQUALS term6
    (55) term5 -> . term5 GREATER term6
    (56) term5 -> . term5 GREATER_EQUALS term6
    (57) term5 -> . term6
    (58) term6 -> . term6 BIT_XOR term7
    (59) term6 -> . term7
    (60) term7 -> . term7 BIT_AND term8
    (61) term7 -> . term8
    (62) term8 -> . term8 LEFT_SHIFT term9
    (63) term8 -> . term8 RIGHT_SHIFT term9
    (64) term8 -> . term9
    (65) term9 -> . term9 PLUS term10
    (66) term9 -> . term9 MINUS term10
    (67) term9 -> . term10
    (68) term10 -> . term10 MULTIPLY term11
    (69) term10 -> . term10 DIVIDE term11
    (70) term10 -> . term10 MODULO term11
    (71) term10 -> . term11
    (72) term11 -> . MINUS term11
    (73) term11 -> . term12
    (74) term12 -> . PLUS term12
    (75) term12 -> . term13
    (76) term13 -> . primary POWER term13
    (77) term13 -> . primary
    (78) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (79) primary -> . arrayd
    (80) primary -> . arraya
    (81) primary -> . literal
    (82) primary -> . varname
    (83) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (87) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (95) literal -> . NUMBER
    (96) literal -> . FLOAT
    (97) literal -> . STRING
    (98) literal -> . true
    (99) literal -> . false

    IDENTIFIER      shift and go to state 36
    nil             shift and go to state 56
    self            shift and go to state 52
    GLOBAL          shift and go to state 30
    AT_THE_RATE     shift and go to state 21
    MINUS           shift and go to state 2
    PLUS            shift and go to state 5
    OPEN_BRACKET    shift and go to state 4
    Array           shift and go to state 61
    NUMBER          shift and go to state 50
    FLOAT           shift and go to state 60
    STRING          shift and go to state 55
    true            shift and go to state 42
    false           shift and go to state 49

    term7                          shift and go to state 12
    term6                          shift and go to state 13
    term5                          shift and go to state 14
    term4                          shift and go to state 15
    term3                          shift and go to state 16
    term2                          shift and go to state 17
    term1                          shift and go to state 18
    term0                          shift and go to state 19
    mlhs                           shift and go to state 1
    primary                        shift and go to state 31
    term9                          shift and go to state 20
    term8                          shift and go to state 41
    arg                            shift and go to state 23
    arrayal                        shift and go to state 32
    expr2                          shift and go to state 82
    literal                        shift and go to state 34
    call                           shift and go to state 35
    function                       shift and go to state 39
    mlhsitem                       shift and go to state 40
    variable                       shift and go to state 58
    varname                        shift and go to state 28
    arraya                         shift and go to state 46
    arrayd                         shift and go to state 48
    term13                         shift and go to state 8
    term12                         shift and go to state 9
    term11                         shift and go to state 10
    term10                         shift and go to state 11

state 5

    (74) term12 -> PLUS . term12
    (74) term12 -> . PLUS term12
    (75) term12 -> . term13
    (76) term13 -> . primary POWER term13
    (77) term13 -> . primary
    (78) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (79) primary -> . arrayd
    (80) primary -> . arraya
    (81) primary -> . literal
    (82) primary -> . varname
    (83) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (87) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (95) literal -> . NUMBER
    (96) literal -> . FLOAT
    (97) literal -> . STRING
    (98) literal -> . true
    (99) literal -> . false
    (150) varname -> . GLOBAL
    (151) varname -> . AT_THE_RATE IDENTIFIER
    (152) varname -> . IDENTIFIER
    (128) variable -> . varname
    (129) variable -> . nil
    (130) variable -> . self

    PLUS            shift and go to state 5
    OPEN_BRACKET    shift and go to state 4
    Array           shift and go to state 61
    NUMBER          shift and go to state 50
    FLOAT           shift and go to state 60
    STRING          shift and go to state 55
    true            shift and go to state 42
    false           shift and go to state 49
    GLOBAL          shift and go to state 30
    AT_THE_RATE     shift and go to state 21
    IDENTIFIER      shift and go to state 78
    nil             shift and go to state 56
    self            shift and go to state 52

    varname                        shift and go to state 80
    primary                        shift and go to state 31
    literal                        shift and go to state 34
    variable                       shift and go to state 79
    arraya                         shift and go to state 46
    term13                         shift and go to state 8
    term12                         shift and go to state 83
    arrayd                         shift and go to state 48

state 6

    (25) expr1 -> return . IDENTIFIER
    (26) expr1 -> return .
